--- a/Assets/Runtime/Plot/MGS.Plot.asmdef
+++ b/Assets/Runtime/Plot/MGS.Plot.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MGS.Drama",
+    "name": "MGS.Plot",
     "rootNamespace": "",
     "references": [
         "GUID:4f53fe3baf7754546ad5a44d7288dd7d"
