--- a/Assets/package.json
+++ b/Assets/package.json
@@ -1,7 +1,7 @@
 {
-    "description": "Drama Player base FSM.",
-    "displayName": "Drama Player",
-    "name": "com.mgs.dramaplayer",
+    "description": "Plot Play base FSM.",
+    "displayName": "Plot FSM",
+    "name": "com.mgs.plotfsm",
     "unity": "2019.4",
     "version": "1.0.0"
 }
