--- a/Assets/Editor/MGS.FSM.Editor.asmdef
+++ b/Assets/Editor/MGS.FSM.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "MGS.FSM"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
