--- a/Assets/Runtime/FSM/MGS.FSM.asmdef
+++ b/Assets/Runtime/FSM/MGS.FSM.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "MGS.FSM"
+    "name": "MGS.FSM",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
